# ChangeLog for net-misc/zaptel
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.8 2004/05/10 13:17:52 dholm Exp $

  10 May 2004; David Holm <dholm@gentoo.org> zaptel-0.9.1.ebuild:
  Added to ~ppc.

*zaptel-0.9.1 (10 May 2004)

  10 May 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.9.1.ebuild,
  files/zaptel-0.9.1-experimental-devfs26.diff,
  files/zaptel-0.9.1-modulesd.diff:
  version bump.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> zaptel-0.7.0.ebuild,
  zaptel-0.8.1.ebuild:
  Add inherit eutils

  17 Mar 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.8.1.ebuild:
  fixed SRC_URI

  16 Mar 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.7.0.ebuild:
  removed blocking of dev-sources (bug #44588)

*zaptel-0.8.1 (16 Mar 2004)

  16 Mar 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.8.1.ebuild:
  version bump, this version still lacks linux-2.6 support
  (kbuild + sandbox is a problem atm...)

  19 Feb 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.7.0.ebuild:
  fixed SRC_URI

*zaptel-0.7.0 (04 Jan 2004)

  04 Jan 2004; Stefan Knoblich <stkn@gentoo.org> zaptel-0.7.0.ebuild,
  files/zaptel-install_prefix-typo.patch,
  files/zaptel-mkdir-usrincludelinux.patch, files/zaptel-modulesd.patch:
  initial import. ebuild created by Ray Russell Reese III <anti@gentoo.org>
