@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/zaptel-0.8.1.ebuild,v 1.3 2004/04/27 21:56:21 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/zaptel-0.8.1.ebuild,v 1.4 2004/06/10 00:51:59 agriffis Exp $
 
 inherit eutils
 
