@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/zaptel
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.8 2004/05/10 13:17:52 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/zaptel/Attic/ChangeLog,v 1.9 2004/06/10 00:51:59 agriffis Exp $
+
+  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> zaptel-0.7.0.ebuild,
+  zaptel-0.8.1.ebuild, zaptel-0.9.1.ebuild:
+  Fix use invocation
 
   10 May 2004; David Holm <dholm@gentoo.org> zaptel-0.9.1.ebuild:
   Added to ~ppc.
